# KaMinPar

./: ,.  ,cf:w  .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.MD  \  build.sh  flake.nix
apps/: CMakeLists.txt  KaMinPar.cc  apps.h  dKaMinPar.cc  dkaminpar.cc  dkaminpar_arguments.cc  dkaminpar_arguments.h  dkaminpar_graphgen.cc  dkaminpar_graphgen.h  environment.cc.in  environment.h  growt_playground.cc  kaminpar.cc  kaminpar_old.cc  mpi_apps.h  version.cc  version.h
apps/benchmarks/: CMakeLists.txt  balancing_benchmark.cc  coarsening_benchmark.cc  dbalancing_benchmark.cc  dcoarsening_benchmark.cc  dcontraction_benchmark.cc  dist_balancing_benchmark.cc  dist_benchmarks_common.cc  dist_benchmarks_common.h  dist_block_clustering_benchmark.cc  dist_clusters_benchmark.cc  dist_coarsening_benchmark.cc  dist_coloring_benchmark.cc  dist_contraction_benchmark.cc  dist_flat_refinement_benchmark.cc  dist_io.h  dist_label_propagation_benchmark.cc  dist_move_sets_benchmark.cc  dist_refinement_benchmark.cc  graphgen_benchmark.cc  io.h  shm_compressed_graph_benchmark.cc  shm_gain_cache_benchmark.cc  shm_input_benchmark.cc  shm_interval_encoding_benchmark.cc  shm_io.h  shm_label_propagation_benchmark.cc  shm_refinement_benchmark.cc  shm_sparsified_label_propagation_benchmark.cc  shm_variable_length_codec_benchmark.cc
apps/dkaminpar/: arguments.cc  arguments.h  graphgen.cc  graphgen.h
apps/io/: compact_external_vector.h  dist_io.cc  dist_io.h  dist_metis_parser.cc  dist_metis_parser.h  dist_parhip_parser.cc  dist_parhip_parser.h  dist_skagen.cc  dist_skagen.h  file_tokener.h  file_toker.h  metis_parser.cc  metis_parser.h  mmap_toker.h  parhip_parser.cc  parhip_parser.h  shm_compressed_graph_binary.cc  shm_compressed_graph_binary.h  shm_input_validator.cc  shm_input_validator.h  shm_io.cc  shm_io.h  shm_metis_parser.cc  shm_metis_parser.h  shm_parhip_parser.cc  shm_parhip_parser.h
apps/tools/: CMakeLists.txt  CMakeLists.txt~  ConnectedComponentsTool.cc  GraphPropertiesTool.cc  GraphRearrangementTool.cc  PartitionPropertiesTool.cc  clique_graph_generator.cc  csv.cc  csv.h  csv_viewer.cc  graph_builder.cc  graph_builder.h  graph_checker.cc  graph_converter.cc  graph_statistics.cc  graph_tools.cc  graph_tools.h  (+8 more)
bindings/: .gitignore  CMakeLists.txt  kaminpar.pyx  kaminpar_networkit.cc  kaminpar_networkit.h  setup.py  shm_networkit_example.py
common/: CLI11.h  CMakeLists.txt  arguments_parser.h  assert.h  asserting_cast.h  assertion_levels.h  cache_aligned_vector.h  console_io.cc  console_io.h  degree_buckets.h  detect_macro.h  environment.cc.in  environment.h  logger.cc  logger.h  math.h  noinit_vector.h  preallocated_vector.h  random.cc  random.h  ranges.h  scalable_vector.h  strutils.cc  strutils.h  tags.h  timer.cc  timer.h
dkaminpar/: CMakeLists.txt  arguments.cc  arguments.h  context.cc  context.h  context_io.cc  context_io.h  debug.cc  debug.h  definitions.h  distributed_context.cc  distributed_context.h  distributed_definitions.h  distributed_io.cc  distributed_io.h  dkaminpar.cc  dkaminpar.h  facade.cc  factories.cc  factories.h  growt.h  io.cc  io.h  logger.h  metrics.cc  metrics.h  mpi_graph.h  mpi_graph_utils.h  mpi_utils.h  mpi_wrapper.h  presets.cc  presets.h  timer.cc  timer.h
dtests/: CMakeLists.txt  distributed_graph_fixtures.h  graph_assertions.h  graph_helpers.h  mpi_graph_test.cc  mpi_gtest_main.cc  mpi_test.h  sparse_alltoall_test.cc  test_mpi_graph.cc
examples/: CMakeLists.txt  shm_c_toy_graph_example.c  shm_networkit_example.cc  shm_toy_graph_example.cc
kaminpar/: CMakeLists.txt  arguments.cc  arguments.h  context.cc  context.h  context_io.cc  context_io.h  debug.cc  debug.h  definitions.cc  definitions.h  factories.cc  factories.h  input_validator.cc  input_validator.h  io.cc  io.h  kaminpar.cc  kaminpar.h  label_propagation.h  metrics.cc  metrics.h  parallel.h  partition_utils.cc  partition_utils.h  presets.cc  presets.h  utils.h
kaminpar-cli/: CLI11.h  CMakeLists.txt  dkaminpar_arguments.cc  dkaminpar_arguments.h  kaminpar_arguments.cc  kaminpar_arguments.h
kaminpar-common/: CMakeLists.txt  assert.h  asserting_cast.h  console_io.cc  console_io.h  constexpr_utils.h  degree_buckets.h  environment.cc.in  environment.h  heap_profiler.cc  heap_profiler.h  inline.h  libc_memory_override.cc  libc_memory_override.h  logger.cc  logger.h  math.h  random.cc  random.h  ranges.h  strutils.cc  strutils.h  timer.cc  timer.h  variable_length_codec.cc  variable_length_codec.h  varint_codec.cc  varint_codec.h  varint_run_length_codec.h  varint_stream_codec.h
kaminpar-dist/: CMakeLists.txt  context.cc  context.h  context_io.cc  context_io.h  debug.cc  debug.h  distributed_label_propagation.h  dkaminpar.cc  dkaminpar.h  factories.cc  factories.h  heap_profiler.cc  heap_profiler.h  logger.h  metrics.cc  metrics.h  presets.cc  presets.h  timer.cc  timer.h
kaminpar-io/: CMakeLists.txt  dist_io.cc  dist_io.h  dist_metis_parser.cc  dist_metis_parser.h  dist_parhip_parser.cc  dist_parhip_parser.h  dist_skagen.cc  graph_compression_binary.cc  graph_compression_binary.h  io.cc  io.h  kaminpar_io.cc  kaminpar_io.h  metis_parser.cc  metis_parser.h  parhip_parser.cc  parhip_parser.h
kaminpar-mpi/: CMakeLists.txt  alltoall.h  binary_reduction_tree.h  datatype.h  definitions.h  grid_alltoall.h  grid_topology.cc  grid_topology.h  sparse_allreduce.h  sparse_alltoall.h  utils.h  wrapper.h
kaminpar-shm/: CMakeLists.txt  ckaminpar.cc  ckaminpar.h  context.cc  context.h  context_io.cc  context_io.h  definitions.h  factories.cc  factories.h  kaminpar.cc  kaminpar.h  label_propagation.h  legacy_label_propagation.h  metrics.cc  metrics.h  partition_utils.cc  partition_utils.h  presets.cc  presets.h
kaminpar_cli/: CLI11.h  CMakeLists.txt  dkaminpar_arguments.cc  dkaminpar_arguments.h  kaminpar_arguments.cc  kaminpar_arguments.h
tests/: CMakeLists.txt  basic_test_helpers.h  graph_builder.h  graph_test.cc  gtest_mpi_listener.h  io_test.cc  matcher.h  mpi_gtest_main.cc  subgraph_extraction_test.cc  tests.h
(+1311 files in other folders)
